# C-

beadandok/Kocka/: CMakeLists.txt  Game.cpp  Game.h  Player.cpp  Player.h  main.cpp
beadandok/Tetris/: Block.cpp  Block.h  BlockTypes.cpp  BlockTypes.h  CMakeLists.txt  Colors.cpp  Colors.h  GamePlan.cpp  GamePlan.h  Grid.cpp  Grid.h  HelperFn.cpp  HelperFn.h  Position.cpp  Position.h  main.cpp
gyakorlat/: cetli_korgyak.cpp  cetlik.cpp  cetlikHf.cpp  havazas.cpp  reszecske.cpp
gyakorlat/1.hazi/: main.cpp
gyakorlat/forditasi_egyseg_hf/: CMakeLists.txt  komplex.cpp  komplex.h  main.cpp
gyakorlat/pulyka/: main.cpp
gyakorlat/widgets/CLionGraphicsKit/: CMakeLists.txt  StaticText.cpp  StaticText.hpp  TextEdit.cpp  TextEdit.hpp  main.cpp  widgets.hpp
